--- a/postItPage.html
+++ b/postItPage.html
@@ -13,7 +13,12 @@
       href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
       rel="stylesheet"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Oswald:wght@200..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -23,9 +28,10 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style copy.css" />
 
     <title>elavibeDotCom</title>
+
     <style>
       #mainNavbar #postIt {
         color: orangered;
@@ -79,11 +85,13 @@
         </ul>
       </div>
     </nav>
-    <section class="container-fluid">
-      <div class="row-lg-6 align-items-center content">
-        <div class="header">
-          <h1>Post It Notes</h1>
-          <p>
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="row text-center">
+          <div class="row justify-content-center">
+            <div class="col-10">
+          <h1>post it drawings</h1>
+          <p class="lead">
             ipsum dolor amet tongue tempor consequat kielbasa, spare ribs cupim
             leberkas aliqua. Nisi pork consequat, ham hock velit short loin
             pastrami duis ut landjaeger. Kevin velit bresaola filet mignon
@@ -94,43 +102,61 @@
           </p>
         </div>
 
-        <div class="outline row justify-content-center align-items-center">
-          <div class="">
-            <img class="postItPictures" src="StarScream.png" />
-          </div>
-          <div><img class="postItPictures" src="XmasCarol.png" /></div>
-        </div>
-      </div>
-    </section>
-    <section class="container-fluid">
-      <div class="row-md-6 align-items-center content">
-        <div class="outline row justify-content-center align-items-center">
-          <div class="">
-            <img class="postItPictures" src="Scoob.png" />
-          </div>
-          <div><img class="postItPictures" src="Shaggy.png" /></div>
-          <div class="">
-            <img class="postItPictures" src="Scoob.png" />
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="container-fluid">
-      <div class="row-md-6 align-items-center content">
-        <div class="outline row justify-content-center align-items-center">
+        <div
+          class="container-fluid row justify-content-center align-items-center"
+        >
           <div class="">
             <img class="postItPictures" src="Grinch.png" />
           </div>
-          <div><img class="postItPictures" src="Max.png" /></div>
+          <div><img class="postItPictures" src="XmasCarol.png" /></div>
+          <div><img class="postItPictures" src="Shaggy.png" /></div>
           <div class="">
-            <img class="postItPictures" src="Sam.png" />
+            <img class="postItPictures" src="Max.png" />
           </div>
+        <!-- </section>
+        <section class="container-fluid">
+          <div class="row-md-4 align-items-center content">
+            <div class="outline row justify-content-center align-items-center"> -->
+              <div class="">
+                <img class="postItPictures" src="StarScream.png" />
+              </div>
+              <div class="">
+                <img class="postItPictures" src="Sam.png" />
+              </div>
+              <div><img class="postItPictures" src="Shaggy.png" /></div>
+              <div class="">
+                <img class="postItPictures" src="Scoob.png" />
+              </div>
+            <!-- </section>
+            <section class="container-fluid">
+              <div class="row-md-4 align-items-center content">
+                <div class="outline row justify-content-center align-items-center"> -->
+                  <div class="">
+                    <img class="postItPictures" src="Grinch.png" />
+                  </div>
+                  <div><img class="postItPictures" src="XmasCarol.png" /></div>
+                  <div><img class="postItPictures" src="Sam.png" /></div>
+                  <div class="">
+                    <img class="postItPictures" src="Shaggy.png" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
         </div>
       </div>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
