--- a/about.html
+++ b/about.html
@@ -89,6 +89,8 @@
             src="DanPicture.png"
             alt="picture of me"
             class="grover img-fluid"
+            id="size"
+
           />
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
