--- a/postItPage.html
+++ b/postItPage.html
@@ -86,64 +86,108 @@
       </div>
     </nav>
     <section class="container-fluid px-0">
-      <div class="row align-items-center content">
-        <div class="row text-center">
-          <div class="row justify-content-center">
-            <div class="col-10">
+      <div
+        class="row text-center justify-content-center align-items-center content"
+      >
+        <div class="col-10">
           <h1>post it drawings</h1>
           <p class="lead">
-           These are my post it note drawings. I started drawing these for my kids lunch box, around Thanksgiving 2021 to count down the days until break. I didn't stop and I am currently just over 600 drawings! Here are some of my favorites.
+            These are my post it note drawings. I started drawing these for my
+            kids lunch box, around Thanksgiving 2021 to count down the days
+            until break. I didn't stop and I am currently just over 600
+            drawings! Here are some of my favorites.
           </p>
         </div>
-
-        <div
-          class="container-fluid row justify-content-center align-items-center"
-        >
-          <div class="">
-            <img class="postItPictures" src="MisfitToy.png" />
-          </div>
-          <div><img class="postItPictures" src="Shadow.png" /></div>
-          <div><img class="postItPictures" src="Shaggy.png" /></div>
-          <div class="">
-            <img class="postItPictures" src="Max.png" />
-          </div>
-        <!-- </section>
-        <section class="container-fluid">
-          <div class="row-md-4 align-items-center content">
-            <div class="outline row justify-content-center align-items-center"> -->
-              <div class="">
-                <img class="postItPictures" src="StarScream.png" />
-              </div>
-              <div class="">
-                <img class="postItPictures" src="Sam.png" />
-              </div>
-              <div><img class="postItPictures" src="Shaggy.png" /></div>
-              <div class="">
-                <img class="postItPictures" src="Scoob.png" />
-              </div>
-            <!-- </section>
-            <section class="container-fluid">
-              <div class="row-md-4 align-items-center content">
-                <div class="outline row justify-content-center align-items-center"> -->
-                  <div class="">
-                    <img class="postItPictures" src="Grinch.png" />
-                  </div>
-                  <div><img class="postItPictures" src="XmasCarol.png" /></div>
-                  <div><img class="postItPictures" src="Sam.png" /></div>
-                  <div class="">
-                    <img class="postItPictures" src="Shaggy.png" />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-        </div>
+      <div class="container-fluid col-10 text-center align-items-center">
+        <img class="postItPicturesTall" src="EarthWorm.png" />
+        <img class="postItPicturesWide" src="Luke.png" />
+        <img class="postItPicturesTall" src="Batman.png" />
+        <img class="postItPicturesWide" src="Fett.png" />
+        <img class="postItPicturesTall" src="DonkeyKong.png" />
+        <img class="postItPicturesWide" src="Stripe.png" />
+        <img class="postItPicturesTall" src="PinHead.png" />
+        <img class="postItPicturesWide" src="Woverine.png" />
+        <img class="postItPicturesTall" src="SpyWhite.png" />
+        <img class="postItPicturesWide" src="Yoda.png" />
+        <img class="postItPicturesTall" src="SpyBlack.png" />
+        <img class="postItPicturesWide" src="VaultBoy.png" />
+        <img class="postItPicturesTall" src="Venom.png" />
+        <img class="postItPicturesWide" src="Joker.png" />
+        <img class="postItPicturesTall" src="Dunce.png" />
+        <img class="postItPicturesWide" src="ACKACK.png" />
+        <img class="postItPicturesTall" src="MaggieHalloween.png" />
+        <img class="postItPicturesWide" src="Silvester.png" />
+        <img class="postItPicturesTall" src="WitchHazel.png" />
+        <img class="postItPicturesWide" src="Archie.png" />
+        <img class="postItPicturesTall" src="Doritos.png" />
+        <img class="postItPicturesWide" src="TomEyes.png" />
+        <img class="postItPicturesTall" src="BroomFantasia.png" />
+        <img class="postItPicturesWide" src="BugsSick.png" />
+        <img class="postItPicturesTall" src="KrustyDoll.png" />
+        <img class="postItPicturesWide" src="CobraCommander.png" />
+        <img class="postItPicturesTall" src="Rex.png" />
+        <img class="postItPicturesWide" src="LargeMarge.png" />
+        <img class="postItPicturesTall" src="BugsWrestling.png" />
+        <img class="postItPicturesWide" src="RenFart.png" />
+        <img class="postItPicturesTall" src="Anxiety.png" />
+        <img class="postItPicturesWide" src="OperaSinger.png" />
+        <img class="postItPicturesTall" src="BarberaCVille.png" />
+        <img class="postItPicturesWide" src="Spacely.png" />
+        <img class="postItPicturesTall" src="Simpsons.png" />
+        <img class="postItPicturesWide" src="BlueDuck.png" />
+        <img class="postItPicturesTall" src="BugsTaz.png" />
+        <img class="postItPicturesWide" src="Ralph.png" />
+        <img class="postItPicturesTall" src="WileSquish.png" />
+        <img class="postItPicturesWide" src="TomJerryRobot.png" />
+        <img class="postItPicturesTall" src="Mugsy.png" />
+        <img class="postItPicturesWide" src="LewisTelly.png" />
+        <img class="postItPicturesTall" src="MrSparkle.png" />
+        <img class="postItPicturesWide" src="TweatieSammy.png" />
+        <img class="postItPicturesTall" src="Waldo.png" />
+        <img class="postItPicturesWide" src="Willy.png" />
+        <img class="postItPicturesTall" src="ODB.png" />
+        <img class="postItPicturesWide" src="Gredo.png" />
+        <img class="postItPicturesTall" src="SirHiss.png" />
+        <img class="postItPicturesWide" src="Bozo.png" />
+        <img class="postItPicturesTall" src="Shake.png" />
+        <img class="postItPicturesWide" src="WileEFlightSuit.png" />
+        <img class="postItPicturesTall" src="TimeCop.png" />
+        <img class="postItPicturesWide" src="DeadPoolDog.png" />
+        <img class="postItPicturesTall" src="CompositeSanta.png" />
+        <img class="postItPicturesWide" src="Aliens.png" />
+        <img class="postItPicturesTall" src="Notagain.png" />
+        <img class="postItPicturesWide" src="FlintstoneRecordPlayer.png" />
+        <img class="postItPicturesTall" src="Cat.png" />
+        <img class="postItPicturesWide" src="Trooper.png" />
+        <img class="postItPicturesTall" src="Dog.png" />
+        <img class="postItPicturesWide" src="MFDOOM.png" />
+        <img class="postItPicturesTall" src="Fish.png" />
+        <img class="postItPicturesWide" src="Rocket.png" />
+        <img class="postItPicturesTall" src="HuckleBerryhound.png" />
+        <img class="postItPicturesWide" src="Moleman.png" />
+        <img class="postItPicturesTall" src="Poke.png" />
+        <img class="postItPicturesWide" src="JabbaRat.png" />
+        <img class="postItPicturesTall" src="Weenie.png" />
+        <img class="postItPicturesWide" src="UmpBugs.png" />
+        <img class="postItPicturesTall" src="VampBurns.png" />
+        <img class="postItPicturesWide" src="PizzaDog.png" />
+        <img class="postItPicturesTall" src="Speedy.png" />
+        <img class="postItPicturesWide" src="cubone.png" />
+        <img class="postItPicturesTall" src="Jon.png" />
+        <img class="postItPicturesWide" src="Saw.png" />
+        <img class="postItPicturesTall" src="Bill.png" />
+        <img class="postItPicturesWide" src="Log.png" />
+        <img class="postItPicturesTall" src="Quazi.png" />
+        <img class="postItPicturesWide" src="Bat.png" />
+        <img class="postItPicturesTall" src="DaffyFeet.png" />
+        <img class="postItPicturesWide" src="DngMouse.png" />
+        <img class="postItPicturesTall" src="snork.png" />
+        <img class="postItPicturesWide" src="Moe.png" />
+        <img class="postItPicturesTall" src="axe.png" />
       </div>
     </section>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
