--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </nav>
     <section class="container-fluid px-0">
-      <div class="row align-items-center content">
+      <div class="row align-items-center content2">
         <div class="col-md-6 order-1 order-md-2">
           <img
             src="elavibeLogoSMOrangeBlack.png"
