--- a/postItPage.html
+++ b/postItPage.html
@@ -154,7 +154,7 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="scriptTest.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
